// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="{}"
  data-testid="default"
  id="default"
/>
`;

exports[`Render properties.html - value[0] 1`] = `
<div
  className="{}"
  data-testid="properties.html"
  id="properties.html"
/>
`;

exports[`Render properties.html-iframe - value[0] 1`] = `
<div
  className="{}"
  data-testid="properties.html-iframe"
  id="properties.html-iframe"
/>
`;

exports[`Render properties.html-styled - value[0] 1`] = `
<div
  className="{\\"style\\":{\\"background\\":\\"yellow\\",\\"padding\\":10}}"
  data-testid="properties.html-styled"
  id="properties.html-styled"
/>
`;

exports[`Render properties.style - value[0] 1`] = `
<div
  className="{\\"style\\":{\\"background\\":\\"yellow\\",\\"padding\\":10}}"
  data-testid="properties.style"
  id="properties.style"
/>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.html 1`] = `true`;

exports[`Test Schema properties.html 2`] = `null`;

exports[`Test Schema properties.html-iframe 1`] = `true`;

exports[`Test Schema properties.html-iframe 2`] = `null`;

exports[`Test Schema properties.html-styled 1`] = `true`;

exports[`Test Schema properties.html-styled 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;
